# thales-client-server-chat

./: readme.txt
rpclib/rpclib/: .gitignore  CMakeLists.txt
server-client-chat/: .gitignore  chat-client - class diagram.txt  chat-client - sequence diagram.txt  chat-server - class diagram.txt  client-server - sequence diagram.txt
server-client-chat/chat-client/: CMakeLists.txt  chat-client.cpp  chat-client.h
server-client-chat/chat-server/: CMakeLists.txt  chat-server.cpp  chat-server.h
